// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render() — T-0003-054 regression: Heading + Text post-extraction snapshot: Heading level 1 through render() matches extracted component output 1`] = `
<Text
  accessibilityRole="header"
  style={
    [
      {
        "fontSize": 28,
        "fontWeight": "700",
      },
      {
        "color": "#0a0a0b",
        "paddingTop": 24,
      },
    ]
  }
>
  Snap Heading
</Text>
`;

exports[`render() — T-0003-054 regression: Heading + Text post-extraction snapshot: Text default through render() matches extracted component output 1`] = `
<Text
  style={
    [
      {
        "fontSize": 16,
        "fontWeight": "400",
      },
      {
        "color": "#0a0a0b",
      },
    ]
  }
>
  Snap Text
</Text>
`;
